--- a/back-classroom/package.json
+++ b/back-classroom/package.json
@@ -2,14 +2,7 @@
   "name": "back-classroom",
   "version": "1.0.0",
   "main": "src/app.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/app.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
+  "private": true,
   "dependencies": {
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
@@ -21,5 +14,8 @@
     "mysql2": "^3.14.0",
     "path": "^0.12.7",
     "ulid": "^3.0.0"
+  },
+  "scripts": {
+    "start": "node src/app.js"
   }
 }
